--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,23 @@
 .add-task-form button {
   margin-right: 10px;
 }
+
+.task-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.task {
+  display: flex;
+  justify-content: space-between;
+  min-width: 300px;
+  margin: 5px 0;
+  padding: 10px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+.task-delete-button {
+  margin-left: 10px;
+}
